# daizu-online-judge-backend-old

./: .gitignore  .pylintrc  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  swagger.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  pythonapp.yml
src/: app.py
src/docs/: openapi_conf.py
src/domain/: problem.py
src/domain/Contest/: contest.py  test_contest.py  test_helper.py
src/domain/Contest/database/: contest_repository.py
src/domain/Contest/usecase/: contest_interactor.py  contest_repository.py
src/domain/Language/: language.py  test_helper.py  test_language.py
src/domain/Language/database/: language_repository.py
src/domain/Language/usecase/: language_interactor.py  language_repository.py
src/domain/Notification/: notification.py  test_notification.py
src/domain/Notification/database/: notification_repository.py
src/domain/Problem/: problem.py  test_problem.py
src/domain/Registration/: registration.py  test_registration.py
src/domain/Submission/: submission.py  test_submission.py
src/domain/Submittion/: submittion.py
src/domain/User/: user.py
src/exceptions/: auth.py  database.py  waf.py
src/infrastructure/auth/: auth0.py
src/interface/controllers/: contest_controller.py  language_controller.py  notification_controller.py  problem_controller.py  registration_controller.py  submission_controller.py  submittion_controller.py  user_controller.py
src/interface/database/: sqlhandler.py
src/interface/tests/: test_contest_controller.py  test_language_controller.py
(+20 files in other folders)
