[tool.poetry]
name = "daizu-online-judge-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8.5"
pika = "^1.1.0"
marshmallow_dataclass = "^7.5.1"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
isort = "^4.3.21"
jedi = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
